add: _hero e main; remove: dist

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "build": "gulp",
+    "dev": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "gulp": "^5.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.79.3"
   }
